First Build and HTML&CSS tests

--- a/index.html
+++ b/index.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Bootcamp Website</title>
-        <script src="./index.js"></script>
-    </head>
-    <body>
-
-    </body>
+  <head>
+    <title>Bootcamp Website</title>
+    <script src="./index.js"></script>
+    <link rel="stylesheet" , href="./index.css" />
+  </head>
+  <body>
+    <header>
+        <h1 class="bigText hRed">Welcome</h1>
+    </header>
+    <main>
+        <div class="firstDiv">
+            <h2>test</h2>
+        </div>
+    </main>
+    <footer>
+        <p>axel springer 2020</p>
+    </footer>
+  </body>
 </html>
